# Travel_Dashboard

./: .gitignore  README.md  main.css  main.py  pyproject.toml  requirements.txt
.taipy/: version.json
.taipy/version/: 9eaa8756-adc3-4def-859f-bcb5f48ff0ec.json
algos/: algos.py
config/: config.py  config.toml
data/: data.py  hk_tourism_synthetic_data.csv  hk_tourist_origin.csv
pages/: root.md  root.py
pages/country/: country.md  country.py
pages/map/: map.md  map.py
pages/performance/: performance.md  performance.py
pages/predictions/: predictions.md  predictions.py
pages/topic/: topic - Copy.py  topic-1.py  topic.md  topic.py  topic_1.py
pages/world/: world.md
