[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["FlorianJacta <98709993+FlorianJacta@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "1.24.2"
taipy = "4.0.0.dev0"
scikit-learn = "1.2.1"
plotly = "^5.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
